# paddleocr_rs

./: .gitignore  Cargo.toml  README.md
src/: det.rs  error.rs  lib.rs  rec.rs
