[package]
name = "paddleocr_rs"
version = "0.1.0"
edition = "2021"
description = "paddleocr-v4 onnxrumtime infer"
license = "AGPL-3.0"
homepage = "https://github.com/yuanyan3060/paddleocr_rs"
repository = "https://github.com/yuanyan3060/paddleocr_rs"
readme = "README.md"
keywords = ["paddle", "ocr", "onnx"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
imageproc = "0.23.0"
ndarray = "0.15.6"
ort = { version = "2.0.0-alpha.4" }
thiserror = "1.0.56"
